[gd_scene load_steps=8 format=3 uid="uid://dl701op4pqihl"]

[ext_resource type="Theme" uid="uid://dkkmstnd7ws1s" path="res://First Theme.tres" id="1_3r20u"]
[ext_resource type="Script" path="res://scene/game_over.gd" id="1_rjyax"]
[ext_resource type="AudioStream" uid="uid://dttlbqj44es0f" path="res://Asset/Sound/cat-call-meow 2.mp3" id="3_tmrta"]
[ext_resource type="AudioStream" uid="uid://baw8nbo5rlugi" path="res://Asset/Sound/cat-meow.mp3" id="4_mjbk8"]

[sub_resource type="Animation" id="Animation_msy53"]
resource_name = "Popup"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(720, -0.25, 0, 0.5, 0, 0, -1, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_fn60a"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlj18"]
_data = {
"Popup": SubResource("Animation_msy53"),
"RESET": SubResource("Animation_fn60a")
}

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3r20u")
script = ExtResource("1_rjyax")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.5
offset_top = -68.5
offset_right = 286.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -154.985
offset_right = 160.0
offset_bottom = -16.985
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Meow?" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "   Meow?   "

[node name="Home" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "   Home   "

[node name="MeowSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tmrta")
pitch_scale = 1.4
bus = &"SFX"

[node name="Sad_Meow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mjbk8")
pitch_scale = 0.8
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dlj18")
}

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/Meow?" to="." method="_on_meow_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/Home" to="." method="_on_home_pressed"]
